# fifth-elephant-mcp-workshop

./: .env.template  .gitignore  README.md  apis.py  main.py  package.json  pyproject.toml  server.ts  todoist_python_sdk.txt  utils.py
prompts/: project_planning_assistant.txt  project_time_optimization_analyzer.txt
resources/: bapple_knowledgebase.md  filters.csv  productivity_stats.json
